--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"version": "1.0.0",
 	"description": "Adrichem.nu app",
 	"scripts": {
-		"dev-server": "webpack-dev-server --config ./config/webpack.config.babel.js",
-		"dev": "webpack --progress --colors --config ./config/webpack.config.babel.js",
-		"dev-watch": "webpack --progress --colors --watch --config ./config/webpack.config.babel.js",
-		"production": "webpack --progress --colors -p --config ./config/webpack.config.babel.js"
+		"dev-server": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.babel.js",
+		"dev": "cross-env NODE_ENV=development webpack --progress --colors --config ./config/webpack.config.babel.js",
+		"dev-watch": "cross-env NODE_ENV=development webpack --progress --colors --watch --config ./config/webpack.config.babel.js",
+		"production": "cross-env NODE_ENV=production webpack --progress --colors -p --config ./config/webpack.config.babel.js"
 	},
 	"devDependencies": {
 		"@types/node": "^8.0.53",
@@ -18,6 +18,7 @@
 		"babel-register": "^6.26.0",
 		"clean-webpack-plugin": "^0.1.17",
 		"copy-webpack-plugin": "^4.2.3",
+		"cross-env": "^5.1.1",
 		"css-loader": "^0.28.7",
 		"css-to-string-loader": "^0.1.3",
 		"expose-loader": "^0.7.4",
